feat: thêm tính năng cảnh báo tồn kho hóa chất
- feat: thêm entity StockThreshold lưu ngưỡng cảnh báo tồn kho
- feat: thêm StockThresholdRepository với query findAllWithItem
- feat: thêm StockAlertService và StockAlertServiceImpl xử lý logic cảnh báo
- feat: thêm StockAlertController với các API quản lý ngưỡng và xem cảnh báo
- feat: thêm DTO StockThresholdRequest, StockThresholdResponse, StockAlertResponse
- feat: tích hợp checkAndNotifyLowStock vào RoomInventoryServiceImpl sau allocate/revoke
- feat: tích hợp checkAndNotifyLowStock vào RentTicketServiceImpl sau confirm-return
- feat: tự động gửi notification cho Admin khi tồn kho xuống dưới ngưỡng
- feat: phân loại cảnh báo LOW_STOCK và OUT_OF_STOCK